force-app/main/default/objects/Payment_schedule__c/fields/Amount_Received_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_From_Customer__c</fullName>
    <label>Amount Received From Customer</label>
    <summarizedField>Receipt_Line_Item__c.Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Line_Item__c.Payment_From__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>