force-app/main/default/objects/Payment_schedule__c/fields/Block_ID__c.field-meta.xml
<CustomField>
    <fullName>Block_ID__c</fullName>
    <formula>Master_Payment_Schedule__r.Block_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block ID</label>
    <type>Text</type>
</CustomField>