force-app/main/default/objects/Payment_schedule__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>OR(ISPICKVAL(Master_Payment_Schedule__r.Status__c, &apos;Completed&apos;),ISPICKVAL(status__c,&apos;Completed&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>