force-app/main/default/objects/Payment_schedule__c/fields/EUP_Block_Name__c.field-meta.xml
<CustomField>
    <fullName>EUP_Block_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK(Booking__r.Plot__r.Tower1__c)),
Booking__r.Plot__r.Tower1__r.Name,
Booking__r.Plot__r.Block1__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUP Block Name</label>
    <type>Text</type>
</CustomField>