force-app/main/default/objects/Payment_schedule__c/fields/Is_Construction__c.field-meta.xml
<CustomField>
    <fullName>Is_Construction__c</fullName>
    <formula>Master_Payment_Schedule__r.Is_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Construction</label>
    <type>Checkbox</type>
</CustomField>