force-app/main/default/objects/Payment_schedule__c/fields/Is_Land__c.field-meta.xml
<CustomField>
    <fullName>Is_Land__c</fullName>
    <formula>Master_Payment_Schedule__r.Is_Land__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Land</label>
    <type>Checkbox</type>
</CustomField>