force-app/main/default/objects/Payment_schedule__c/fields/Is_Rain_or_Euphoria__c.field-meta.xml
<CustomField>
    <fullName>Is_Rain_or_Euphoria__c</fullName>
    <formula>OR(
    Project_Name__c = &quot;Rhythm of Rain&quot;,
    Project_Name__c = &quot;Euphoria In The East&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rain or Euphoria</label>
    <type>Checkbox</type>
</CustomField>