force-app/main/default/objects/Payment_schedule__c/fields/Is_True_Project_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_True_Project_Booking__c</fullName>
    <formula>TEXT(Booking__r.Project__c ) == &apos;Whispering Petals&apos; || TEXT(Booking__r.Project__c ) == &apos;Euphoria In The East&apos; || TEXT(Booking__r.Project__c ) == &apos;Rhythm of Rain&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is True Project Booking</label>
    <type>Checkbox</type>
</CustomField>