force-app/main/default/objects/Payment_schedule__c/fields/Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone__c</fullName>
    <formula>IF(Booking__r.Property_TypeFor__c = &apos;Apartment&apos;, TEXT(Master_Payment_Schedule__r.Status__c) , TEXT(status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Milestone</label>
    <type>Text</type>
</CustomField>