force-app/main/default/objects/Payment_schedule__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>IF(Quote__c != null,TEXT(Quote__r.Project__c),IF(Booking__c !=null,TEXT(Booking__r.Project__c),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>