force-app/main/default/objects/Payment_schedule__c/fields/Total_Outstanding_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Due_Amount__c</fullName>
    <formula>AmountB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount__c - Total_Receipt_Amount__c</inlineHelpText>
    <label>Total Outstanding/Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>