force-app/main/default/objects/Payment_schedule__c/fields/Total_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Settlement_Amount__c</fullName>
    <formula>if( Include_Interest__c = true,  Pending_Amount__c +  Interest_Amount__c, AmountB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Settlement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>