force-app/main/default/objects/Payment_schedule__c/fields/Total_Sum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Amount__c</fullName>
    <formula>Booking__r.Total_Cost_Ex_Leg_Main__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>