force-app/main/default/objects/Payment_schedule__c/fields/Voora_Lead__c.field-meta.xml
<CustomField>
    <fullName>Voora_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voora Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment schedules</relationshipLabel>
    <relationshipName>Payment_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>